<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Android Test 1</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_title">Compose</string>
    <string name="attach">Attach</string>
    <string name="send">Send</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="mark_unread">Mark As Unread</string>
    <string name="text_compose_sender">From</string>
    <string name="text_compose_reciever">To</string>
    <string name="text_compose_manyrecipients_public" translatable="false">CC</string>
    <string name="text_compose_manyrecipients_private" translatable="false">BCC</string>
    <string name="text_compose_subject">Subject</string>
    <string name="text_compose_content">Compose email</string>
    <string name="text_receive_receiver">to %1$s</string>
    <string name="text_receive_date" translatable="false">%1$d/%2$d/%3$d</string>
    <string name="test_weblate">This is a test string without translate</string>
    <string name="test_weblate_translated">This is a test string translated by dev</string>
    <string name="test_weblate_cannotTranslate" translatable="false">This is a test string which can\'t be translate</string>
    <string name="test_weblate_1">This is a test string 1</string>
    <string name="test_weblate_2">This is a test string 2</string>
    <string name="test_weblate_3" translatable="false">This is a test string 3</string>
    <string name="test_weblate_again1">Let\'s test weblate again</string>
    <string name="test_weblate_again2">Let\'s test weblate again, but I\'ve translated this</string>
    <string name="test_weblate_again3" translatable="false">Let\'s test weblate again, but do not trans this</string>
    <string name="test_weblate_another">Let\'s test weblate one more time</string>
    <string name="test_weblate_another2">Let\'s test weblate one more time, but I\'ve translated this</string>
    <string name="test_weblate_another3" translatable="false">Let\'s test weblate again, but do not trans this</string>
</resources>
