<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.androidtest1.MainActivity">

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/ic_outline_archive_24"
        android:title="@string/archive"
        android:contentDescription="@string/archive"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_outline_delete_24"
        android:title="@string/delete"
        android:contentDescription="@string/delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mark_unread"
        android:icon="@drawable/ic_outline_email_24"
        android:title="@string/mark_unread"
        android:contentDescription="@string/mark_unread"
        app:showAsAction="always" />

    <item
        android:id="@+id/receive_action_setting"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/action_settings"
        android:contentDescription="@string/action_settings"
        app:showAsAction="always" />

</menu>