<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FirstFragment"
    android:padding="@dimen/padding_compose_layout">

<!--    <androidx.core.widget.NestedScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_compose_sender"
        style="@style/TextCompose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_compose_sender"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_compose_sender"
        style="@style/EditTextCompose"
        app:layout_constraintStart_toEndOf="@id/textview_compose_sender"
        app:layout_constraintTop_toTopOf="@id/textview_compose_sender"
        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_compose_reciever"
        style="@style/TextCompose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_compose_sender"
        android:text="@string/text_compose_reciever"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_compose_receiver"
        style="@style/EditTextCompose"
        app:layout_constraintStart_toEndOf="@id/textview_compose_reciever"
        app:layout_constraintTop_toTopOf="@id/textview_compose_reciever"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_compose_manyrecipients_public"
        style="@style/TextCompose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_compose_reciever"
        android:text="@string/text_compose_manyrecipients_public"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_compose_manyrecipients_public"
        style="@style/EditTextCompose"
        app:layout_constraintStart_toEndOf="@id/textview_compose_manyrecipients_public"
        app:layout_constraintTop_toTopOf="@id/textview_compose_manyrecipients_public"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_compose_manyrecipients_private"
        style="@style/TextCompose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_compose_manyrecipients_public"
        android:text="@string/text_compose_manyrecipients_private"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_compose_manyrecipients_private"
        style="@style/EditTextCompose"
        app:layout_constraintStart_toEndOf="@id/textview_compose_manyrecipients_private"
        app:layout_constraintTop_toTopOf="@id/textview_compose_manyrecipients_private"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_compose_subject"
        style="@style/EditTextCompose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_compose_manyrecipients_private"
        android:layout_marginTop="@dimen/margin_compose_top"
        android:hint="@string/text_compose_subject"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_compose_content"
        style="@style/EditTextCompose"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_compose_subject"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_compose_top"
        android:hint="@string/text_compose_content"
        android:gravity="top"/>

<!--    </androidx.core.widget.NestedScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>